// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventListItem action tests should call the provided funcion on the long press 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  testID="eventListItem"
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#9e9e9e70",
        "borderRadius": 10,
        "borderWidth": 1,
        "display": "flex",
        "gap": 8,
        "margin": 8,
        "minHeight": 40,
        "opacity": 1,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#d81e8b",
          "display": "flex",
          "flexDirection": "row",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
      testID="eventListItemName"
    >
      Test Name
    </Text>
    <Text
      style={
        {
          "color": "#757575",
          "display": "flex",
          "flexDirection": "row",
          "fontSize": 14,
        }
      }
      testID="eventListItemDescription"
    >
      Test Description
    </Text>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "#757575",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
        testID="eventListItemStart"
      >
        Start at 12:00 PM
      </Text>
      <Text
        style={
          {
            "color": "#757575",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
        testID="eventListItemEnd"
      >
        End at 12:30 PM
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          S
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          M
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          T
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          W
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          T
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          F
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          S
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`EventListItem render tests should render a Event item correctly 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  testID="eventListItem"
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#9e9e9e70",
        "borderRadius": 10,
        "borderWidth": 1,
        "display": "flex",
        "gap": 8,
        "margin": 8,
        "minHeight": 40,
        "opacity": 1,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#d81e8b",
          "display": "flex",
          "flexDirection": "row",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
      testID="eventListItemName"
    >
      Test Name
    </Text>
    <Text
      style={
        {
          "color": "#757575",
          "display": "flex",
          "flexDirection": "row",
          "fontSize": 14,
        }
      }
      testID="eventListItemDescription"
    >
      Test Description
    </Text>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "#757575",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
        testID="eventListItemStart"
      >
        Start at 12:00 PM
      </Text>
      <Text
        style={
          {
            "color": "#757575",
            "display": "flex",
            "flex": 1,
            "flexDirection": "row",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
        testID="eventListItemEnd"
      >
        End at 12:30 PM
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          S
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          M
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          T
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          W
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#d81e8b70",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          T
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          F
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#9e9e9e30",
            "borderColor": "#9e9e9e50",
            "borderRadius": 999,
            "borderWidth": 1,
            "display": "flex",
            "height": 25,
            "justifyContent": "center",
            "margin": 8,
            "padding": 3,
            "width": 25,
          }
        }
        testID="eventListItemWeekDay"
      >
        <Text
          style={
            {
              "color": "#000000",
              "display": "flex",
              "flexDirection": "row",
              "fontSize": 12,
            }
          }
          testID="label"
        >
          S
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;
